fix: align center

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,10 +1,10 @@
-.projects-section {
-    width: 500px;
-    cursor: pointer;
+.home-size {
+    height: calc(100% - 133px);
 }
 
+
 @media screen and (max-width:770px){
-    .projects-section {
-        width: 300px;
-    }    
+    .home-size {
+        height: calc(100% - 80px);
+    } 
 }
